--- a/frontend/public/styles/Styles.css
+++ b/frontend/public/styles/Styles.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
+*{
+    font-family: "Comfortaa", sans-serif;
+}
+
+
 .form{
     background-color: rgb(0, 0, 0, .9);
 }
@@ -8,4 +15,14 @@
 
 .login{
     background-image: url('../img/wood.jpeg');
+}
+
+.menu-hidden{
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transition: all 400ms;
+}
+
+.menu-show{
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    transition: all 400ms;
 }
